[project]
name = "pyloudnorm"
version = "0.2.0"
description = "Implementation of ITU-R BS.1770-4 loudness algorithm in Python."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Christian Steinmetz", email = "c.j.steinmetz@qmul.ac.uk" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "scipy>=1.0.1",
    "numpy>=1.14.2",
]

[project.urls]
Homepage = "https://github.com/csteinmetz1/pyloudnorm"
Repository = "https://github.com/csteinmetz1/pyloudnorm"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pyloudnorm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
